# chromana

./: .gitignore  CNAME  GITHUB_PAGES.md  INSTALL.md  LICENSE  README.md  bunfig.toml  eslint.config.mjs  package.json  pyproject.toml  tsconfig.json
.github/workflows/: deploy.yml  release.yml
chromana/: __init__.py  builder.py
data/magic/: symbology.json
demo/: action.js  index.html  lorcana-0.1.0.css  lorcana-1.0.0.css  lorcana-1.1.0.css  lorcana-action.js  lorcana.html  magic-1.0.0.css  magic-1.0.1.css  magic-1.0.2.css  magic-1.1.0.css  magic-1.2.0.css  magic-action.js  magic.css  magic.html  magic.js  script.js  style.css  styles.css
icons/lorcana/: config.toml
icons/magic/: config.toml
scripts/: build.py  build.sh  build.ts  clean.py  install.sh  read_config.py  remove_bun.sh  serve.py  serve.ts  ttf_to_ttx.py
scripts/magic/: add-shadow.py  add_flat.py  add_shadow.py  create_loyalty.py
src/icons/magic/: config.toml
src/icons/pokemon/: config.toml
src/types/: bun-env.d.ts  index.ts
